<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CalDynam</string>
    <string name="section_summary">Summary</string>
    <string name="section_weight_measurement">Weight measurement</string>
    <string name="section_meal_logging">Meal logging</string>
    <string name="section_food_catalog">Food catalog</string>
    <string name="action_about">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weight_insert">Insert your today weight :</string>
    <string name="weight_already">You have already inserted you weight today.</string>
    <string name="submit">Submit</string>
    <string name="action_reset">Reset</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="food_name">NAME</string>
    <string name="food_category">CATEGORY</string>
    <string name="food_calorie">CALORIES</string>
    <string name="food_delete">Delete</string>
    <string name="delete_confirmation_food">Are you sure to want to delete this food from catalog ?</string>
    <string name="delete_confirmation_title">Confirmation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="food_image">IMAGE</string>
    <string name="take_picture">Take a picture</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="food">Food</string>
    <string name="workout">Workout</string>
    <string name="morning">MORNING</string>
    <string name="daytime">DAYTIME</string>
    <string name="evening">EVENING</string>
    <string name="add_recipe_workout">Add recipe/workout</string>
    <string name="walking">Walking</string>
    <string name="running">Running</string>
    <string name="cycling">Cycling</string>
    <string name="tennis">Tennis</string>
    <string name="swimming">Swimming</string>
    <string name="other">Other</string>
    <string name="change_date">Change date</string>
    <string name="cal">Calories</string>
    <string name="edit_profile">Edit profile</string>
    <string name="weight_goal">Weight goal (kg)</string>
    <string name="workout_goal">Workout goal (kcal)</string>
    <string name="food_goal">Food goal (kcal)</string>
    <string name="no_weight_info">No weight logged! Add your weight in the dedicated view.</string>
    <string name="need_lose_weight_info">Your current weight is %1$.1fkg and your objective is %2$.1fkg\nYou need to lose %3$.1fkg</string>
    <string name="need_take_weight_info">Your current weight is %1$.1fkg and your objective is %2$.1fkg\nYou need to take %3$.1fkg</string>
    <string name="perfect_weight">Your current weight is %1$.1fkg!\nPerfect!</string>
    <string name="error_no_weight_logged">You haven\'t logged any weight!</string>
    <string name="error_value_entered">The value is not correct!</string>
    <string name="ok">Ok</string>
    <string name="about_authors">Alexandre Perez\nJohan Chavaillaz\nMSE - 2015</string>
    <string name="licenses">CalDynam use:\nMaterialDialog - https://github.com/drakeet/MaterialDialog\nMaterial Design icons by Google - https://github.com/google/material-design-icons\ngreenDAO - http://greendao-orm.com\nIcons from icons8 - http://icons8.com</string>
    <string name="error_nothing_selected">You haven\'t selected a food item!</string>
</resources>