<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.hesso.master.caldynam.ui.fragment.FoodViewFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:layout_margin="20dp"
                android:scaleType="fitXY"
                android:id="@+id/iv_image"
                android:src="@drawable/ic_launcher" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/food_name"
                    style="@style/LabelStyle" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Name value"
                    android:textStyle="normal"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/tv_name" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/food_category"
                    style="@style/LabelStyle" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Category value"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/tv_category" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/food_calorie"
                    style="@style/LabelStyle" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Calorie value"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/tv_calorie" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/btn_delete"
                    android:text="@string/food_delete"
                    style="@style/ButtonStyle" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
